k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: translation-workplace-api
  name: translation-workplace-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: translation-workplace-api
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: translation-workplace-api
    spec:
      containers:
      - image: quay.io/shu1saitohibm/translation-workplace-api
        name: translation-workplace-api
        resources: {}
status: {}
