k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: translation-workplace-api
  name: translation-workplace-api
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: translation-workplace-api
